[package]
name = "plation_keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
web3 = "0.18.0"
tokio = { version = "1", features = ["full"] }
hex-literal = "0.3.4"
futures = "0.3.5"